unpackaged/objects/Doctor__c.object
<CustomObject>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_name__c</fullName>
        <label>Last name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                    <default>true</default>
                    <label>Admin</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Doctor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Doctor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doctors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>